# unifyroute

./: .env.backup.20260306_010412  .env.backup.20260308_024452  .gitignore  CONFBACKUP_CHANGES.md  CONFBACKUP_TEST_REPORT.md  MASTER_PLAN.md  MIGRATION_GUIDE.md  docker-compose.yml  pytest.ini  run-tests.sh  sample.env  test_output.txt  unifyroute
.agents/workflows/: run-tests.md
api-gateway/src/api_gateway/: main.py
brain/src/brain/: config.py  errors.py  health.py
data/: unifyroute.db
docs/: CONTRIBUTING.md  architecture.md  installation.md  llmway-architecture.md  progress-and-todo.md  usage.md
docs/brain/: implementation-plan.md  task.md  walkthrough.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src/components/: mode-toggle.tsx
gui/src/lib/: api.ts  wizard.ts
gui/src/pages/: Brain.tsx  Chat.tsx  Login.tsx  Logs.tsx  ModelManagement.tsx  Models.tsx  Providers.tsx  RoutingStrategy.tsx  Settings.tsx  SetupWizard.tsx
launcher/: pyproject.toml
launcher/src/launcher/: main.py
migrations/versions/: 001_full_schema.py  50c0fa74a505_add_chat_sessions_and_messages.py
router/: pyproject.toml
router/src/router/: core.py  quota.py
router/src/router/adapters/: __init__.py  anthropic.py  base.py  cohere_adapter.py  compat_adapters.py  fireworks_adapter.py  groq_adapter.py  mistral_adapter.py  ollama_adapter.py  openai.py  zai_adapter.py
scripts/: create-key.py  setup.py  wizard.py
shared/: pyproject.toml
tests/: conftest.py  test_brain_api.py  test_connection_security.py  test_keys.py
(+14 files in other folders)
